--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-router-dom": "^4.1.2",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-scripts": "1.0.11",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "styled-components": "^2.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
